Enrich docs